2026-01-13 ### scss 규칙 마이그레이션  @import -> @use ###
1. as * 변경 -> rem, $변수 그대로 사용.
2. zoom 유지 -> 넓이가 아니라 pc 화면 조건으로 변경

--- a/assets/styles/base/_common.scss
+++ b/assets/styles/base/_common.scss
@@ -1,3 +1,7 @@
+﻿@use "../abstracts/functions" as *;
+@use "../abstracts/mixins";
+@use "../abstracts/variables" as *;
+
 html {
     scroll-behavior: smooth;
 }
@@ -244,7 +248,7 @@ main {
             height: rem(18);
         }
 
-        @include btn-hover-effect;
+        @include mixins.btn-hover-effect;
     }
 
     input {
