--- a/assets/styles/mobile/pages/_join.scss
+++ b/assets/styles/mobile/pages/_join.scss
@@ -1,4 +1,7 @@
-@charset "UTF-8";
+﻿@use "../../abstracts/functions" as *;
+@use "../../abstracts/variables" as *;
+
+
 
 // join.scss - 회원가입 페이지 스타일 (Sign-up page styles)
 
