--- a/assets/styles/mobile/pages/_login.scss
+++ b/assets/styles/mobile/pages/_login.scss
@@ -1,3 +1,6 @@
+﻿@use "../../abstracts/functions" as *;
+@use "../../abstracts/variables" as *;
+
 // 로그인 페이지 스타일 (Login Page Styles)
 
 .login-page {
