--- a/assets/styles/pc.scss
+++ b/assets/styles/pc.scss
@@ -1,30 +1,30 @@
-@charset "UTF-8";
+﻿@charset "UTF-8";
 
 // 1. Abstracts (변수, 함수, 믹스인)
-@import "abstracts/functions";
-@import "abstracts/variables";
-@import "abstracts/mixins";
+@use "abstracts/functions" as *;
+@use "abstracts/variables" as *;
+@use "abstracts/mixins";
 
 // 2. Base (리셋, 타이포그래피, 공통 스타일)
-@import "base/reset";
-@import "base/typography";
-@import "base/common";
-@import "pc/base/pc-base";
+@use "base/reset";
+@use "base/typography";
+@use "base/common";
+@use "pc/base/pc-base";
 
 // 3. Components (PC 전용 컴포넌트)
-@import "pc/components/badges";
-@import "pc/components/cards";
-@import "pc/components/ranking";
-@import "pc/components/modal";
-@import "pc/components/toast";
-@import "pc/components/dropdown";
+@use "pc/components/badges";
+@use "pc/components/cards";
+@use "pc/components/ranking";
+@use "pc/components/modal";
+@use "pc/components/toast";
+@use "pc/components/dropdown";
 
 // 4. Layout (PC 헤더, 푸터)
-@import "pc/layout/header";
-@import "pc/layout/footer";
+@use "pc/layout/header";
+@use "pc/layout/footer";
 
 // 5. Pages (PC 페이지별 스타일)
-@import "pc/pages/main";
-@import "pc/pages/cart";
-@import "pc/pages/search";
-@import "pc/pages/mypage";
+@use "pc/pages/main";
+@use "pc/pages/cart";
+@use "pc/pages/search";
+@use "pc/pages/mypage";
