--- a/assets/styles/pc/components/_dropdown.scss
+++ b/assets/styles/pc/components/_dropdown.scss
@@ -1,3 +1,6 @@
+﻿@use "../../abstracts/functions" as *;
+@use "../../abstracts/variables" as *;
+
 // Dropdown Component (Select Wrapper Style)
 
 .dropdown-wrapper {
