--- a/assets/styles/mobile/components/_cards.scss
+++ b/assets/styles/mobile/components/_cards.scss
@@ -1,11 +1,15 @@
-@charset "UTF-8";
+﻿@use "../../abstracts/functions" as *;
+@use "../../abstracts/mixins";
+@use "../../abstracts/variables" as *;
+
+
 
 .product-card {
-    @include product-card-base;
+    @include mixins.product-card-base;
 
     .card-thumb {
         border-radius: rem(4);
-        @include mobile-touch-effect($gray-50);
+        @include mixins.mobile-touch-effect($gray-50);
 
         .badge-corner {
             top: rem(8);
@@ -59,7 +63,7 @@
                 &.tag-outline {
                     background-color: $secondary-bg !important;
                     border: none;
-                    color: $black !important;
+                    color: $gray-700 !important;
                 }
 
                 &.tag-green {
@@ -70,10 +74,11 @@
     }
 
     .card-info {
+        flex: 1; // 가용 공간 채움
         padding: rem(16);
         padding-bottom: rem(8);
-        min-height: rem(104); // 상품명 2줄 및 가격 영역 높이 고정 (Align buttons regardless of name length)
-        @include mobile-touch-effect;
+        min-height: rem(104); // 최소 높이 고정 (상품명 2줄 대응)
+        @include mixins.mobile-touch-effect;
 
         &>* {
             line-height: 150%;
@@ -81,7 +86,6 @@
 
         .product-name {
             font-size: rem(14);
-            font-weight: 600;
             line-height: 1.4;
             letter-spacing: rem(-0.28);
         }
@@ -108,7 +112,6 @@
 
             .unit-highlight {
                 color: $gray-800;
-                font-weight: 600;
             }
         }
 
@@ -138,20 +141,21 @@
 
     // 수량 조절 및 버튼 영역
     .card-control {
+        margin-top: auto; // 하단 밀착
         padding: 0 rem(16) rem(8);
         gap: rem(4);
 
         .btn-icon {
             width: rem(32);
             height: rem(32);
-            border: 1px solid $gray-200;
+            border: rem(1) solid $gray-200;
             border-radius: rem(2);
             display: flex;
             align-items: center;
             justify-content: center;
             background: $white;
-            color: $black;
-            @include mobile-touch-effect;
+            color: $gray-700;
+            @include mixins.mobile-touch-effect;
 
             svg {
                 width: rem(16);
@@ -167,13 +171,13 @@
         }
 
         .qty-box {
-            @include qty-box-base(rem(32), rem(12));
+            @include mixins.qty-box-base(rem(32), rem(12));
             flex: 1;
             border-radius: rem(2);
 
             button {
                 width: rem(24);
-                @include mobile-touch-effect;
+                @include mixins.mobile-touch-effect;
 
                 svg {
                     width: rem(12);
@@ -186,8 +190,7 @@
     // 하단 추가 정보
     .bottom-info {
         padding: 0 rem(16) rem(16);
-        margin-top: auto; // 하단으로 밀착 (Push to bottom)
-        min-height: rem(60); // 3줄 기준 최소 높이 확보 (Consistent footer height)
+        min-height: rem(60); // 최소 높이 확보
         border-top: none;
 
         >* {
@@ -201,7 +204,6 @@
             font-size: rem(10);
             color: $gray-300;
             letter-spacing: -0.02em;
-            font-weight: 600;
 
             &:last-child {
                 margin-bottom: 0;
@@ -219,27 +221,27 @@
             }
 
             .icon-tag {
-                @include icon-mask('/assets/icons/product-tag.svg');
+                @include mixins.icon-mask('/assets/icons/product-tag.svg');
                 margin-right: rem(2);
             }
 
             .icon-time {
-                @include icon-mask('/assets/icons/product-time.svg');
+                @include mixins.icon-mask('/assets/icons/product-time.svg');
                 margin-right: rem(2);
             }
 
             .icon-ban {
-                @include icon-mask('/assets/icons/icon-ban.svg');
+                @include mixins.icon-mask('/assets/icons/icon-ban.svg');
                 margin-right: rem(2);
             }
 
             .icon-cart-limit {
-                @include icon-mask('/assets/icons/icon-cart-limit.svg');
+                @include mixins.icon-mask('/assets/icons/icon-cart-limit.svg');
                 margin-right: rem(2);
             }
 
             .icon-sparkle {
-                @include icon-mask('/assets/icons/sparkling.svg');
+                @include mixins.icon-mask('/assets/icons/sparkling.svg');
                 margin-right: rem(2);
             }
 
