--- a/assets/styles/mobile/layout/_bottom_nav.scss
+++ b/assets/styles/mobile/layout/_bottom_nav.scss
@@ -1,4 +1,8 @@
-@charset "UTF-8";
+﻿@use "../../abstracts/functions" as *;
+@use "../../abstracts/mixins";
+@use "../../abstracts/variables" as *;
+
+
 
 .bottom-nav {
     position: fixed;
@@ -14,7 +18,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 rem(16);
+    // padding: 0 rem(16);
     z-index: 1000;
     box-sizing: border-box;
 
@@ -29,7 +33,7 @@
         height: 100%;
         color: $gray-300; // 색상 코드
         text-decoration: none;
-        @include mobile-touch-effect; // 터치 피드백 추가
+        @include mixins.mobile-touch-effect; // 터치 피드백 추가
 
         .icon {
             width: rem(24);
