--- a/assets/styles/mobile/pages/_search_result.scss
+++ b/assets/styles/mobile/pages/_search_result.scss
@@ -1,3 +1,7 @@
+﻿@use "../../abstracts/functions" as *;
+@use "../../abstracts/mixins";
+@use "../../abstracts/variables" as *;
+
 // _search_result.scss
 
 .search-result-page {
@@ -23,7 +27,6 @@
 
         .search-result-title {
             font-size: rem(18);
-            font-weight: 600;
             color: $gray-700; // 가장 어두운 색
 
             .keyword {
@@ -54,7 +57,6 @@
             border-bottom: rem(1.5) solid $gray-700; // 회색 구분선
             margin-bottom: rem(16);
             font-size: rem(14);
-            font-weight: 600; // 기본 굵기
             color: $gray-700; // 가장 어두운 텍스트
             letter-spacing: rem(-0.28);
 
@@ -71,7 +73,6 @@
 
             .label {
                 font-size: rem(14);
-                font-weight: 600;
                 color: $gray-700;
                 flex-shrink: 0;
                 margin-right: rem(12);
@@ -240,7 +241,6 @@
 
             .label {
                 font-size: rem(14);
-                font-weight: 600;
                 color: $gray-700;
                 width: rem(84); // 라벨 너비 통일
                 flex-shrink: 0;
@@ -262,7 +262,6 @@
                     border: none;
                     background: transparent;
                     font-size: rem(14);
-                    font-weight: 600;
                     color: $gray-700;
 
                     &::placeholder {
@@ -281,7 +280,6 @@
                 border: rem(1) solid $gray-700;
                 background-color: $white;
                 font-size: rem(14);
-                font-weight: 600;
                 color: $gray-700;
                 display: flex;
                 align-items: center;
@@ -308,7 +306,6 @@
 
             custom-checkbox {
                 font-size: rem(14);
-                font-weight: 600;
                 color: $gray-700;
                 letter-spacing: rem(-0.28);
 
@@ -320,10 +317,9 @@
             .btn-add-selected {
                 height: rem(40);
                 padding: 0 rem(8);
-                border: rem(1) solid $gray-900; // 가장 어두운 테두리
+                border: rem(1) solid $gray-700; // 가장 어두운 테두리
                 background-color: $white;
                 font-size: rem(14);
-                font-weight: 600;
                 color: $gray-700;
                 border-radius: rem(2);
             }
@@ -401,18 +397,9 @@
     }
 
     .product-grid-2 {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr) !important;
-        gap: $space-xs rem(4) !important; // 수직 간격 확보
-        align-items: stretch !important;
+        @include mixins.mobile-touch-effect(transparent); // 그리드 영역 터치 피드백 제외
 
         .product-card {
-            width: 100% !important;
-            position: relative;
-            display: flex;
-            flex-direction: column !important;
-            height: 100% !important;
-            min-height: 100%; // 추가 확보
             background-color: $white;
 
 
@@ -427,7 +414,7 @@
                     width: 100%;
                     aspect-ratio: 1/1;
                     object-fit: cover;
-                    border-radius: $space-sm;
+                    border-radius: rem(4);
                 }
 
                 .card-checkbox {
@@ -458,16 +445,11 @@
 
             .product-name {
                 font-size: $font-size-base;
-                font-weight: 600;
                 color: $gray-700;
                 margin-bottom: $space-xs;
                 line-height: 1.4;
                 height: auto;
-                overflow: hidden;
-                display: -webkit-box;
-                -webkit-line-clamp: 2;
-                line-clamp: 2;
-                -webkit-box-orient: vertical;
+                @include mixins.truncate(2);
             }
 
             .card-info {
@@ -522,7 +504,6 @@
                         width: 76%;
                         color: $white;
                         font-size: $font-size-lg;
-                        font-weight: 600;
 
                         height: 48%;
 
@@ -537,12 +518,11 @@
                             font-size: $font-size-base;
                             color: $gray-700;
                             cursor: pointer;
-                            font-weight: 600;
                             display: flex;
                             align-items: center;
                             justify-content: center;
 
-                            @include btn-hover-effect;
+                            @include mixins.btn-hover-effect;
                         }
                     }
                 }
