--- a/assets/styles/pc/base/_pc-base.scss
+++ b/assets/styles/pc/base/_pc-base.scss
@@ -1,3 +1,6 @@
+﻿@use "../../abstracts/functions";
+@use "../../abstracts/variables" as *;
+
 // PC 전용 베이스 스타일
 html {
     overflow-x: auto;
@@ -5,7 +8,7 @@ html {
 }
 
 body {
-    min-width: rem(1360);
+    min-width: functions.rem(1360);
     position: relative;
     margin: 0;
 }
