--- a/assets/styles/pc/components/_modal.scss
+++ b/assets/styles/pc/components/_modal.scss
@@ -1,3 +1,7 @@
+﻿@use "../../abstracts/functions" as *;
+@use "../../abstracts/mixins";
+@use "../../abstracts/variables" as *;
+
 // 모달 (레이어 팝업) 공통 스타일
 // Bootstrap Modal 구조(modal > modal-dialog > ...)를 기반 커스텀 스타일링
 
@@ -44,7 +48,7 @@
         max-width: rem(400); // 팝업 너비 커스텀
         pointer-events: auto; // 모달 내부는 클릭 가능하도록 복구
 
-        @include mobile {
+        @include mixins.mobile {
             max-width: calc(100% - #{$space-xl});
             margin: $space-md auto;
         }
